web-app/src/index.css
@import url('https://fonts.googleapis.com/css?family=Bree+Serif');
@import url('https://fonts.googleapis.com/css?family=Ubuntu');


body {
  font-family: 'Ubuntu';
  color: #fffeff;
  background:#333;
}

html,body,#root{
  height: 100%;
  width: 100%;
  position: relative;
}

html, body, #root, #root>div{
    height: 100%;
    padding:0;
    margin: 0;
}

.centered {
  position:absolute;
  top:50%;
  left:50%;
  transform: translateY(-50%) translateX(-50%);
}

.hidden{
  display:none;
}

#root>div {
  display:flex;
  min-height:100%;
  flex-flow: column nowrap;
}

#header{
  background:#222;
  height:50px;
  width:100%;
  position:relative;
}

#logo {
  font: 24px 'Ubuntu', serif;
  display:inline-block;
  vertical-align:middle;
  height:38px;
  padding:0 20px;
}

#header button {
  background:#333;
  border: none;
  outline:none;
  display: inline-block;
  color: #fffeff;
  font-family: 'Ubuntu';
  font-size: 15px;
  font-weight: bold;
  padding: 0 20px;
  height:34px;
  margin:8px;
  margin-right: 0;
  text-decoration: none;
}

#header button:hover:not(:disabled) {
  cursor: pointer;
  color: #333;
  background: #e8e5e8;
}

#header-content {
  max-width:1024px;
  margin: 0 auto;
}

#wrapper {
  flex:1;
  display:flex;
  flex-direction:column;
}

#content {
  flex-grow: 1;
  overflow-y:scroll;

  /* This is required to make the upload
  window take up the entire screen */
  position: relative;
}

#palette {
  height:50px;
  width:100%;
  margin:0;
  padding:0;
  background:#222;
  display: flex;
}

.swatch {
  box-sizing:border-box;
  position:relative;
  height: 30px;
  min-width:30px;
  flex-grow:1;
  border:1px solid #333;
  margin: 10px 0px 10px 10px;
}

.swatch:hover {
  box-shadow: 0 0 3px #333;
}

.swatch.selected {
  border:2px solid #aaa;
  box-shadow: 0 0 8px #aaa;
}

.swatch:last-child{
  margin-right:10px;
}

.swatch:not(:hover) .swatchText,
.swatch:not(:hover) .closeButton{
  display:none;
}

.closeButton {
  color: #111;
  font: 14px/100% arial, sans-serif;
  position: absolute;
  right: 0px;
  width:30px;
  height: 100%;
  text-decoration: none;
  border:none;
  background:none;
  box-shadow:none;
  outline:none;
}

.swatchText {
  font-weight:bold;
  color:#333;
}

.closeButton:hover{
  color:#fff;
}

.closeButton:after {
  content: 'x';
}

#imageManager {
  flex:auto;
  overflow:hidden;
}

#imageManager img{
  max-width: 100%;
  height: auto;

  max-height:100%;
  width:auto;
}

#imageManager canvas{
  max-width: 100%;
  height: auto;

  max-height:100%;
  width:auto;
}

.flyout {
  display: inline-block;
}

#share-flyout {
  float:right;
  margin-right:8px;
  margin-left:1px;
}

#auto-button:disabled{
  background:#252525;
  color:#555;
  outline:none;
}

.flyout:not(:hover) .flyout-button,
.flyout:not(:hover) .flyout-input,
.flyout.disabled .flyout-button,
.flyout.disabled .flyout-input {
  display:none!important;
}

.flyout .flyout-button {
  margin:1px!important;
}

.flyout .flyout-input {
  color:#ddd;
  border:none;
  text-align:center;
  box-shadow:none;
  box-radius:none;
  background:none;
  width:2em;
  appearance:none;
  margin:1px;
}

.dropzone {
  position: absolute;
  height:100%;
  width:100%;
  margin:0;
  padding:0;
}

.dropzone-active {
  background:#bedc6e;
}

.dropzone-reject {
  background:#f03335;
}

